Changes to migration and index.html.erb

--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -1,1 +1,7 @@
-<h1>Welcome to my Quiz Web App</h1>
+<h1>Lorem ipsum dolor sit amet!</h1>
+
+<h2>Lorem ipsum dolor.</h2>
+<H6>100% Family Participation Participate Today!</H6>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil optio, nulla asperiores dolor, unde doloribus et. Laudantium quas amet, recusandae similique possimus nulla repudiandae sunt minus, ea voluptas saepe illum enim culpa minima. Tempora ipsum nulla explicabo libero voluptate fugit ad quidem nemo adipisci doloribus sequi dolor, architecto cum voluptatibus!</p>
+
+<h3>CAMPAIGN DATES</h3>
