--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Lorem ipsum dolor sit amet!</h1>
+<h1>21 Days to COUNT ME IN!</h1>
 
 <h2>Lorem ipsum dolor.</h2>
 <H6>100% Family Participation Participate Today!</H6>
