--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,5 @@
 h1 {
-  color: #E3E85A;
-  font-family: 'chunkfiveroman', sans-serif;
+  color: red;
+  font-family: sans-serif;
   font-size:30px;
 }
