--- a/app/views/funds/new.html.erb
+++ b/app/views/funds/new.html.erb
@@ -1,3 +1,13 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 <h1>COUNT ME IN!</h1>
+  <%= simple_form_for @fund do |f| %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :city %>
+    <%= f.input :zip %>
+    <%= f.input :phone %>
+    <%= f.input :email %>
+    <br />
+    <%= f.submit 'Create', :class => 'btn btn-primary' %>
+  <% end %>
 </div>
