Changes to show.html.erb

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,80 @@
-h1 {
+p {
+  color: black;
+  font-style: bold;
+  font-family: sans-serif;
+  font-size:18px;  
+  padding: auto;
+  margin: auto;
+}
+
+.dates {
+  text-align: center;
+
+}
+
+hr {
+  clear:both;
+}
+
+.links {
+  padding-top: 26px;
+  text-align: right;
+
+}
+
+.links a {
+  color:black;
+  font-size: 25px;
+  border-bottom: 1px solid #dfdfdf;
+  
+}
+
+
+.button {
   color: red;
+  font-style: bold;
   font-family: sans-serif;
   font-size:30px;
+  position: relative;
+  text-align: center;
+  
+}
+
+.clear {
+  clear:both;
+}
+
+.circle {
+    font-weight:bold;
+    font-style: italic;
+    position: relative;
+    border-radius: 100%;
+    background: #f84342;
+    border: 1px solid #F7F7F7;
+    width: 80px;
+    height: 80px;
+    margin: 10px 10px;
+    text-align: center;
+    color: #FFF;
+    font-size: 10px;
+    line-height: 16px;
+    cursor: pointer;
+    transform:rotate(11deg);
+    -ms-transform:rotate(11deg); /* IE 9 */
+    -webkit-transform:rotate(11deg); /* Opera, Chrome, and Safari */
+}
+
+.slogan {
+    font-weight:bold;
+    font-style: bold;
+    position: relative;
+    width: auto;
+    height: 80px;
+    margin: 10px 10px;
+    text-align: center;
+    color: black;
+    font-size: 18px;
+    line-height: 16px;
+    cursor: pointer;
+
 }
