--- a/app/views/funds/index.html.erb
+++ b/app/views/funds/index.html.erb
@@ -1,7 +1,22 @@
-<h1>21 Days to COUNT ME IN!</h1>
 
-<h2>Lorem ipsum dolor.</h2>
-<H6>100% Family Participation Participate Today!</H6>
+
+
+
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil optio, nulla asperiores dolor, unde doloribus et. Laudantium quas amet, recusandae similique possimus nulla repudiandae sunt minus, ea voluptas saepe illum enim culpa minima. Tempora ipsum nulla explicabo libero voluptate fugit ad quidem nemo adipisci doloribus sequi dolor, architecto cum voluptatibus!</p>
-
+<div class="dates">
 <h3>CAMPAIGN DATES</h3>
+<p>September 14-20 * September 28-October 4 * October 5-11</p>
+</div>
+<br />
+<p>*Elementary Rock and Roll Campaign: At 90% elementary family participation, the entire elementary will have a <i>HALL DANCE</i> during the last 20 minutes of school.</p>
+<p>*Academy and High School Campaign: For every family that participates - each student in that family will receive a <b>SPECIAL HOMEWORK PASS.</b></p>
+
+<br />
+<br />
+<br />
+<hr />
+<div class="button">
+
+<p><%= link_to 'COUNT ME IN!', new_fund_path, :class => 'btn btn-primary' %></p>
+</div>
