--- a/app/views/funds/new.html.erb
+++ b/app/views/funds/new.html.erb
@@ -1,5 +1,6 @@
-<div class="booyah-box col-xs-10 col-xs-offset-1">
-<h1>COUNT ME IN! $100 PLEDGE.</h1>
+<div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-5">
+<h1>COUNT US IN FOR THE $100 PLEDGE!</h1>
+<br />
   <%= simple_form_for @fund do |f| %>
     <%= f.input :name %>
     <%= f.input :address %>
