--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,30 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <div class="col-xs-3">
+      <div class="circle">
+        <br />
+        FUND
+        <br />
+        RAISER
+        <br />
+        APP
+      </div>
+    </div>
+
+    <div class="col-xs-4">
+      
+      <div class="slogan">
+      <br class="clear" />
+      21 Days to COUNT ME IN!
+    </div>
+    
+    
+    </div>
+  </header>
+  <hr />
+  
 
 <%= yield %>
 
